Bug 520987 - Color selector for wallpaper has broken theming
Summary: Color selector for wallpaper has broken theming
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.6.91
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-03 05:47 UTC by zivirkari
Modified: 2026-06-19 02:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.8.0
Sentry Crash Report:


Attachments
The broken-looking color selector (30.27 KB, image/png)
2026-06-03 05:47 UTC, zivirkari
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zivirkari 2026-06-03 05:47:05 UTC
Created attachment 192836 [details]
The broken-looking color selector

STEPS TO REPRODUCE
1. Navigate to the settings for any wallpaper (background, lockscreen, login screen)
2. Select "Plain Color" wallpaper type
3. Open color picker

OBSERVED RESULT
The color picker has broken-looking controls

EXPECTED RESULT
For this color picker to look in line with the rest of Plasma

SOFTWARE/OS VERSIONS
Operating System (available in the Info Center app, or by running `kinfo` in a terminal window): Arch Linux
KDE Plasma Version: 6.6.91
KDE Frameworks Version: 6.26.0
Qt Version: 6.11.1
Comment 1 Tobias Fella 2026-06-03 09:51:06 UTC
You're seeing the QML version of the Color Dialog. That is not supposed to happen at all.
Comment 2 Tobias Fella 2026-06-03 11:02:35 UTC
Correction: Unfortunately, this is expected. We were not yet able to prevent this version of the dialog from showing up.
Comment 3 Bug Janitor Service 2026-06-03 13:13:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-integration/-/merge_requests/231
Comment 4 Tobias Fella 2026-06-15 09:54:36 UTC
Git commit 3751451f9964145c9bd8c544ab3fd5b9030861b5 by Tobias Fella.
Committed on 11/06/2026 at 12:39.
Pushed by tfella into branch 'master'.

Provide native color dialog backed by QColorDialog

This means we will no longer show the awful qml color dialog anywhere.

M  +1    -0    qt6/autotests/CMakeLists.txt
M  +1    -0    qt6/src/platformtheme/CMakeLists.txt
A  +55   -0    qt6/src/platformtheme/kdeplatformcolordialoghelper.cpp     [License: GPL(v2.0+)]
A  +23   -0    qt6/src/platformtheme/kdeplatformcolordialoghelper.h     [License: GPL(v2.0+)]
M  +15   -1    qt6/src/platformtheme/kdeplatformtheme.cpp

https://invent.kde.org/plasma/plasma-integration/-/commit/3751451f9964145c9bd8c544ab3fd5b9030861b5