Provide native color dialog backed by QColorDialog

This means we will no longer show the awful qml color dialog anywhere.

BUG: 520987